--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=testCustomjwtMiddle;TrustServerCertificate=true;MultipleActiveResultSets=true;User ID=sa;Password=test"
+    "DefaultConnection": "Server=.;Database=testCustomjwtMiddle;TrustServerCertificate=true;MultipleActiveResultSets=true;User ID=sa;Password=test;Column Encryption Setting=Enabled"
   }
 }
